[package]
name = "final_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = "1.0.136"
serde_json = "1.0.79"
serde_derive = "1.0.136"
diesel = { version = "1.4.8", features = ["sqlite"] }
dotenv = "0.15.0"

uuid = { version = "0.8.2", features = ["serde", "v4"] }
